// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio should render correctly 1`] = `
"<div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span>Option</span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 20px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #2c3e50;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #0070f3;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div>"
`;

exports[`Radio should support react-node in description 1`] = `
"<div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span>Option</span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 20px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #2c3e50;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #0070f3;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span>Option 1</span><span class=\\"\\">Description for Option1<style>
        span {
          color: #666;
          font-size: calc(var(--radio-size) * 0.85);
          padding-left: calc(var(--radio-size) + var(--radio-size) * 0.375);
        }
      </style></span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 20px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #2c3e50;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #0070f3;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span>Option 1</span><span class=\\"\\"><b>Description</b> for Option1<style>
        span {
          color: #666;
          font-size: calc(var(--radio-size) * 0.85);
          padding-left: calc(var(--radio-size) + var(--radio-size) * 0.375);
        }
      </style></span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 20px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #2c3e50;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #0070f3;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div></div>"
`;

exports[`Radio should work correctly with different sizes 1`] = `
"<div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span>mini</span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 14px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #2c3e50;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #0070f3;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span>small</span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 16px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #2c3e50;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #0070f3;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span>medium</span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 20px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #2c3e50;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #0070f3;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span>large</span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 24px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #2c3e50;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #0070f3;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span>xlarge</span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 28px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #2c3e50;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #0070f3;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span>custom</span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 24px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #2c3e50;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #0070f3;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div></div>"
`;

exports[`Radio should work with different colors 1`] = `
"<div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span></span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 20px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #2c3e50;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #0070f3;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span></span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 20px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #2c3e50;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #7928ca;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span></span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 20px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #2c3e50;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #17c964;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span></span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 20px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #2c3e50;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #f5a623;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span></span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 20px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #2c3e50;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #f21361;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div></div>"
`;

exports[`Radio should work with different textColors 1`] = `
"<div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span></span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 20px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #0070f3;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #0070f3;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span></span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 20px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #7928ca;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #0070f3;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span></span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 20px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #17c964;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #0070f3;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span></span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 20px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #f5a623;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #0070f3;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div><div class=\\"radio \\"><label><input type=\\"radio\\" value=\\"\\"><span class=\\"name\\"><span class=\\"point  \\"></span></span></label><style>
        input {
          opacity: 0;
          visibility: hidden;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          --radio-size: 20px;
        }
        label {
          display: flex;
          flex-direction: column;
          justify-content: flex-start;
          color: #f21361;
          cursor: pointer;
        }
        .name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid #eaeaea;
        }
        .point.active:after {
          border: calc(var(--radio-size) * 0.34) solid #0070f3;
        }
        label:hover .point:not(.active):not(.disabled) {
          background: #eaeaea;
        }
      </style></div></div>"
`;
